feat(jans-config-api): agama endpoint
